# pall

./: Cargo.toml  Step0.1.md  false  machine_spec.md
.pi/agents/: py-focus.md
.pi/prompts/: py-execute.md  py-interview.md
.py/plans/2026_05_04_compiler/: INTERVIEW.md  PLAN.md
.py/plans/2026_05_05_persistent_and_update_var_names_change/: INTERVIEW.md  PLAN.md
.py/plans/2026_05_05_state_enum_refactor/: INTERVIEW.md  PLAN.md
.py/plans/2026_05_06_gen_comp_test/: INTERVIEW.md  PLAN.md
.py/plans/2026_05_06_some_fixes_to_compiler/: INTERVIEW.md  PLAN.md
.py/plans/2026_05_07_compiler_testing/: COMPRESSED_CONTEXT.md  INTERVIEW.md  PLAN.md  TEST_MACHINES.md
.py/plans/2026_05_10_implement_casting_in_compiler/: INTERVIEW.md  PLAN.md
.py/plans/2026_05_13_reference_validation/: INTERVIEW.md  PLAN.md
.py/plans/2026_05_14_const_and_literal_casting_rules/: INTERVIEW.md  PLAN.md
.py/plans/2026_09_24_refactor_types_for_serialization/: INTERVIEW.md  PLAN.md
docs/: ADDING_MACHINES.md  README.md
src/: lib.rs  main.rs
src/compiler/: codegen.rs  error.rs  mod.rs  reference_validation.rs  type_validation.rs  typecheck.rs  typecheck_rules.rs  validation.rs
src/compiler/backend/: mod.rs
src/compiler/backend/rust/: codegen.rs  mod.rs
src/compiler/backend/rust/templates/: group.hbs  mod.hbs  tick.hbs  types.hbs
src/machine/: actions.rs  connections.rs  expression.pest  expression.rs  grammar.pest  link.rs  mod.rs  parse.rs  plan.md  statement.rs  test.rs  types.rs  variables.rs
src/machine/parser/: expression.rs  link.rs  mod.rs  statement.rs
var/: braino.bat
