[package]
name = "pall"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pest = "2.8.6"
pest_derive = "2.8.6"
handlebars = "5"
serde_json = "1"
chrono = "0.4"

[[bin]]
name = "creator"
path = "src/bin/creator/src/main.rs"

[[bin]]
name = "runner"
path = "src/bin/runner/src/main.rs"

[[bin]]
name = "gen-fixture"
path = "src/bin/gen-fixture.rs"
